--- a/package.json
+++ b/package.json
@@ -18,6 +18,20 @@
     "eslint-plugin-mocha": "^5.2.0",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "mocha": "^5.2.0",
+    "mocha-multi-reporters": "^1.1.7",
+    "mochawesome": "^3.1.1",
+    "nyc": "^13.1.0",
+    "yeoman-assert": "^3.1.1",
+    "yeoman-test": "^1.9.1"
+  },
+  "scripts": {
+    "test": "nyc --all mocha",
+    "build": "npm prune",
+    "lint": "eslint .",
+    "pre§coverage": "npm test",
+    "coverage": "nyc check-coverage",
+    "audit": "npm audit"
   }
 }
