--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "nyc --all mocha",
     "build": "npm prune",
     "lint": "eslint .",
-    "pre§coverage": "npm test",
+    "precoverage": "npm test",
     "coverage": "nyc check-coverage",
     "audit": "npm audit"
   }
