Configure travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: node_js
 node_js:
   - "lts/*"
+jobs:
+  include:
+    - script: npm run-script lint
+    - script: npm test
+    - script: npm run-script coverage
+    - script: npm audit
