--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "test": "nyc --all mocha",
     "build": "npm prune",
     "lint": "eslint .",
-    "precoverage": "npm test",
-    "coverage": "nyc check-coverage",
-    "audit": "npm audit"
+    "coverage": "nyc check-coverage"
   }
 }
