--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mocha-multi-reporters": "^1.1.7",
     "mochawesome": "^3.1.1",
     "nyc": "^13.1.0",
+    "sinon": "^7.2.3",
     "yeoman-assert": "^3.1.1",
     "yeoman-test": "^1.9.1"
   },
