--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test": "nyc --all mocha",
     "build": "npm prune",
     "lint": "eslint .",
+    "precoverage": "npm test",
     "coverage": "nyc check-coverage"
   }
 }
