--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "fs-extra": "^7.0.1",
     "mocha": "^5.2.0",
     "mocha-multi-reporters": "^1.1.7",
     "mochawesome": "^3.1.1",
